Fixed index page layout issue (properly)

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -5,6 +5,9 @@
     margin-bottom:20px;
   }
   
+  .image_container {
+    min-height:160px;
+  }
   .image {
     margin-top:100px;
     text-align: center;
